<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
	    <TextView
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/hello_world"
			android:focusable="true"
			android:focusableInTouchMode="true">
			<requestFocus/>
		</TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BlueTooth On/Off"/>
	    <Switch
	        android:id="@+id/toggleEnable"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:textOn="Yes"
			android:textOff="No"
	        />

	   	<TextView
	   	    android:id="@+id/server_side"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/server_side" />

	   	<Button
	   	    android:id="@+id/startDiscoverable"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:onClick="startDiscoverable"
	        android:text="@string/start_discoverable"
	        />

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView
					android:id="@+id/subtitle_uuid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="14sp"
					android:layout_alignParentLeft="true"
					android:text="UUID"/>
				<TextView
					android:id="@+id/text_uuid"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textSize="19sp"
					android:layout_below="@+id/subtitle_uuid"
					android:layout_alignParentLeft="true"
					android:text="----------------------------" />

			</RelativeLayout>
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:text="Refresh"
				/>
		</RelativeLayout>
	   	
	    <Button 
	        android:id="@+id/startServer"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:onClick="startServer"
	        android:text="@string/start_server"
	        />
	    
	    <Button 
	        android:id="@+id/stopServer"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:onClick="stopServer"
	        android:text="@string/stop_server"
	        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/result_text"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:background="@drawable/received_data"

				/>
			<Button
				android:id="@+id/clearResult"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom"
				android:onClick="clearResult"
				android:text="@string/clear_data"/>

		</LinearLayout>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/write_data" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/writeText"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:inputType="text"
				/>

			<Button
				android:id="@+id/writeData"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="writeData"
				android:text="@string/write_button"/>

		</LinearLayout>



    </LinearLayout>

</LinearLayout>
