<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/client_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_side"
            android:textSize="20sp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <requestFocus/>
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/subtitle_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentLeft="true"
                    android:text="Device"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subtitle_device"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="3">
                        <TextView
                            android:id="@+id/text_device"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_alignParentLeft="true"
                            android:text="@string/device_empty" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="7">
                        <TextView
                            android:id="@+id/text_device_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_alignParentLeft="true"
                            android:text="@string/device_empty" />
                    </LinearLayout>
                </LinearLayout>

            </RelativeLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Search"
                android:onClick="searchDevice"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/subtitle_uuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_alignParentLeft="true"
                    android:text="UUID"/>
                <TextView
                    android:id="@+id/text_uuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_below="@+id/subtitle_uuid"
                    android:layout_alignParentLeft="true"
                    android:text="@string/uuid_empty" />

            </RelativeLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Search"
                android:onClick="searchUuid"
                />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
    